# ATOMIC-Automatic-JUDGER

./: .gitignore  LICENSE  README.md  Wiki.md  apache.py  csmcoloredloggerprint.py  judge.py  requirements.txt  usermanage.py  wsgi_interface.py
central/: status.json
installer/: README.md
main/: CMakeCache.txt  CMakeLists.txt  CST_Listing.cpp  CST_Listing.h  CST_PlainTextDialog.cpp  CST_PlainTextDialog.h  CST_RadioButtonDialog.cpp  CST_RadioButtonDialog.h  CST_RichTextEdit.cpp  CST_RichTextEdit.h  CST_Separator.cpp  CST_Separator.h  CST_TestCaseDialog.cpp  CST_TestCaseDialog.h  CST_TextEditorDialog.cpp  CST_TextEditorDialog.h  Makefile  README.md  WIN_ClassesSettings.cpp  WIN_ClassesSettings.h  WIN_ContestsSettings.cpp  WIN_ContestsSettings.h  WIN_GenerateTestCasesDialog.cpp  WIN_GenerateTestCasesDialog.h  WIN_UsersSettings.cpp  WIN_UsersSettings.h  aigen.py  apache.py  build.py  cmp.txt  compile_and_run.ps1  consts.h  csmcoloredloggerprint.py  judge.py  moc_CST_RadioButtonDialog.cpp  moc_CST_RichTextEdit.cpp  moc_CST_TextEditorDialog.cpp  ollama_sysprompt.txt  panel.cpp  panel.py  (+11 more)
main/central/: lastaccess.json  sessions.json
main/source/: aliases.json  classes.json  contests.json  exclusionList  settings.json  theme.qss  theme_color.opt  users.json  version.json
main/source/images/: notice.txt
main/tempWorking/: notDeletable.txt
main/templates/: Dockerfile.compile  Dockerfile.python
main/userdata/Student1/: SumOfAB.cpp
main/userdata/Student1/1746071608/: Test1.cpp
main/userdata/nautilus/: Test1.cpp
main/workspace/result/: Student1.json
main/www/: .html  contest.html  login.html  scoreboard.html  thanks.txt  useroptions.html
main/www/js/: contest.js  general.js  generalDeferred.js  home.js  login.js  scoreboard.js  useroptions.js
main/www/js/ext/: theme-dynamic.js
main/www/reserved/: contest.html  error.html  statsbar.html  userprofile.html
main/www/styles/: contest.css  error.css  general.css  home.css  login.css  scoreboard.css  useroptions.css  userprofile.css
source/: aliases.json  classes.json  contests.json  settings.json  version.json  websites.json
userdata/abc/: Test1.py
userdata/nautilus/: Test1.cpp
workspace/queue/: Test1.cpp  [nautilus][Test1].cpp
workspace/result/: abc.json
www/: .html  index.html
www/credits/: index.html
www/css/: credits.css  error.css  general.css  home.css  login.css  userprofile.css
www/js/: general.js  general_defer.js  home_anim.js  login.js
www/login/: index.html
www/reserved/: error.html  userprofile.html
www/styles/: general.css  home.css
